[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/imgs/vermelho.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/new_dynamicfontdata.tres" type="DynamicFontData" id=3]
[ext_resource path="res://CriarJogo.gd" type="Script" id=4]

[sub_resource type="Theme" id=1]
CheckBox/icons/selecionado = ExtResource( 1 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://assets/fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 42
font_data = ExtResource( 2 )

[sub_resource type="ButtonGroup" id=5]

[sub_resource type="DynamicFontData" id=6]
font_path = "res://assets/fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=7]
size = 19
font_data = SubResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 30
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://assets/fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=10]
size = 33
font_data = SubResource( 9 )

[node name="MainMenu" type="Node2D"]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="BG" type="ColorRect" parent="HUD"]
margin_right = 800.0
margin_bottom = 480.0
color = Color( 0.247059, 0.647059, 0.654902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Modo" type="CanvasLayer" parent="HUD"]

[node name="BG" type="ColorRect" parent="HUD/Modo"]
margin_left = 83.9052
margin_top = 104.882
margin_right = 383.905
margin_bottom = 344.882
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulo" type="Label" parent="HUD/Modo"]
margin_left = 124.524
margin_top = 32.8536
margin_right = 342.524
margin_bottom = 120.854
theme = SubResource( 1 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Modo"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Aleatorio" type="CheckBox" parent="HUD/Modo"]
margin_left = 93.0
margin_top = 112.0
margin_right = 376.0
margin_bottom = 172.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
pressed = true
group = SubResource( 5 )
text = "Aleatorio"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Especifico" type="CheckBox" parent="HUD/Modo"]
margin_left = 93.0
margin_top = 178.0
margin_right = 376.0
margin_bottom = 238.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
group = SubResource( 5 )
text = "Especifico"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Especifico2" type="CheckBox" parent="HUD/Modo"]
margin_left = 93.0
margin_top = 244.0
margin_right = 376.0
margin_bottom = 304.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
group = SubResource( 5 )
text = "Desafios"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Erro" type="Label" parent="HUD/Modo"]
visible = false
margin_left = 152.0
margin_top = 296.0
margin_right = 323.0
margin_bottom = 320.0
theme = SubResource( 1 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Digite 4 numeros"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Descricao" type="CanvasLayer" parent="HUD"]

[node name="BG" type="ColorRect" parent="HUD/Descricao"]
margin_left = 410.536
margin_top = 104.882
margin_right = 710.536
margin_bottom = 344.882
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulo" type="Label" parent="HUD/Descricao"]
margin_left = 353.11
margin_top = 29.6788
margin_right = 781.11
margin_bottom = 117.679
theme = SubResource( 1 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Descrição"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Descricao" type="RichTextLabel" parent="HUD/Descricao"]
margin_left = 415.0
margin_top = 106.0
margin_right = 708.0
margin_bottom = 341.0
custom_fonts/normal_font = SubResource( 8 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
scroll_active = false

[node name="BG_botao" type="ColorRect" parent="HUD"]
margin_left = 344.0
margin_top = 384.0
margin_right = 456.0
margin_bottom = 424.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="botaoTexto" type="Label" parent="HUD/BG_botao"]
margin_right = 112.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Entrar"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HUD/Modo/Aleatorio" to="HUD/BG_botao" method="_on_Aleatorio_pressed"]
[connection signal="pressed" from="HUD/Modo/Especifico" to="HUD/BG_botao" method="_on_Especifico_pressed"]
[connection signal="pressed" from="HUD/Modo/Especifico2" to="HUD/BG_botao" method="_on_Especifico2_pressed"]
[connection signal="gui_input" from="HUD/BG_botao" to="HUD/BG_botao" method="_on_BG_botao_gui_input"]
